De-parent providers instances and delete them on close. Please, read about this in the reviewboard request (number 101027)

Courtesy patch by JosèManuel Santamarì Lema. Thanks :D

BUG:269490
REVIEW:101027